# check-availavility

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.chalice/deployed/: dev.json
chalicelib/: base_scraper.py  ougatou_hotel.py
chalicelib/util/: dict_util.py  ssm_util.py
