[tool.poetry]
name = "checkavailablity"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
chalice = "^1.31.2"
boto3 = "^1.34.144"
pydantic-settings = "^2.3.4"
line-bot-sdk = "^3.11.0"
aws-lambda-powertools = "^2.41.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipython = "^8.26.0"
pydantic = "^2.8.2"
flake8 = "^7.1.0"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
